// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> snapshots renders correctly 1`] = `
<View
  collapsable={false}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  />
</View>
`;

exports[`<Tooltip /> snapshots renders correctly with hidden popover 1`] = `
<View
  collapsable={false}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#242424",
          "fontFamily": undefined,
          "fontSize": 23.57142857142857,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginBottom": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        }
      }
    >
      Tooltip content
    </Text>
  </View>
</View>
`;

exports[`<Tooltip /> snapshots renders correctly with text content 1`] = `
<View
  collapsable={false}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#242424",
          "fontFamily": undefined,
          "fontSize": 23.57142857142857,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginBottom": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        }
      }
    >
      Tooltip content
    </Text>
  </View>
</View>
`;

exports[`<Tooltip /> snapshots renders correctly with visible popover 1`] = `
<View
  collapsable={false}
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#242424",
          "fontFamily": undefined,
          "fontSize": 23.57142857142857,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "marginBottom": 0,
          "textAlign": "left",
          "textDecorationLine": "none",
          "textDecorationStyle": "solid",
        }
      }
    >
      Tooltip content
    </Text>
  </View>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onShow={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#fafafa14",
          "flex": 1,
          "opacity": 1,
        }
      }
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "transparent",
              "height": 0,
              "left": 0,
              "overflow": "visible",
              "position": "absolute",
              "top": 0,
              "width": 0,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#242424",
                "fontFamily": undefined,
                "fontSize": 23.57142857142857,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "marginBottom": 0,
                "textAlign": "left",
                "textDecorationLine": "none",
                "textDecorationStyle": "solid",
              }
            }
          >
            Tooltip content
          </Text>
        </View>
        <View
          style={
            {
              "left": -7.5,
              "position": "absolute",
              "top": -2,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "transparent",
                "borderBottomColor": "gray",
                "borderBottomWidth": 15,
                "borderLeftColor": "transparent",
                "borderLeftWidth": 8,
                "borderRightColor": "transparent",
                "borderRightWidth": 8,
                "borderStyle": "solid",
                "height": 0,
                "width": 0,
              }
            }
            testID="RNE__Tooltip_Triangle"
          />
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "gray",
              "borderRadius": 10,
              "display": "flex",
              "flex": 1,
              "height": 40,
              "justifyContent": "center",
              "left": -17.999,
              "padding": 10,
              "position": "absolute",
              "top": 10,
              "width": 150,
            }
          }
          testID="tooltipPopoverContainer"
        >
          <View
            testID="rnb-test-popover"
          >
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#242424",
                  "fontFamily": undefined,
                  "fontSize": 23.57142857142857,
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                  "marginBottom": 0,
                  "textAlign": "left",
                  "textDecorationLine": "none",
                  "textDecorationStyle": "solid",
                }
              }
            >
              Popover content
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
